# ripmedia

./: .gitignore  CHANGES.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.ps1
src/ripmedia/: __init__.py  cli.py  config.py  cookies.py  downloader.py  errors.py  model.py  paths.py  pipeline.py  plugin_system.py  resolver.py  shared.py  tagger.py  ui.py  update.py  urls.py  webhost.py  ytdlp_utils.py
src/ripmedia/providers/: __init__.py  detect.py  spotify.py  ytdlp_metadata.py
src/ripmedia/web/: __init__.py  app.js  index.html  style.css
tests/: test_config.py  test_detect.py  test_detect_provider.py  test_model_json.py  test_paths.py  test_resolver_dispatch.py  test_resolver_scoring.py  test_spotify_parse.py  test_urls.py  test_ytdlp_utils.py
