[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ripmedia"
version = "0.1.0"
description = "CLI media ingestion tool (metadata-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
  "yt-dlp>=2024.8.6",
  "mutagen>=1.47",
  "requests>=2.32",
]

[project.optional-dependencies]
spotify = [
  "spotipy>=2.24",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ripmedia = "ripmedia.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ripmedia"]
include = ["src/ripmedia/web/*.html", "src/ripmedia/web/*.css", "src/ripmedia/web/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
